studio-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: studio
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: studio
  template:
    metadata:
      labels:
        app: studio
    spec:
      containers:
      - name: studio
        image: supabase/studio:20241202-71e5240
        ports:
        - containerPort: 3000
        livenessProbe:
          httpGet:
            path: /api/profile
            port: 3000
          initialDelaySeconds: 3

---
apiVersion: v1
kind: Service
metadata:
  name: studio-service
  namespace: default
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 3000
  selector:
    app: studio

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vector
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vector
  template:
    metadata:
      labels:
        app: vector
    spec:
      containers:
      - name: vector
        image: supabase/vector:0.34.0-alpine
        ports:
        - containerPort: 9001
        livenessProbe:
          httpGet:
            path: /health
            port: 9001
          initialDelaySeconds: 3

---
apiVersion: v1
kind: Service
metadata:
  name: vector-service
  namespace: default
spec:
  type: ClusterIP
  ports:
    - port: 9001
      targetPort: 9001
      protocol: TCP
      name: http
  selector:
    app: vector

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: studio-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/proxy-body-size: "100m"
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: studio-service
            port:
              number: 80
